Got the latest snapshot 15/03/2015

--- a/Src/OpenCBS.ArchitectureV2/Languages/en-US.json
+++ b/Src/OpenCBS.ArchitectureV2/Languages/en-US.json
@@ -8,17 +8,21 @@
 	"Add an employee": "Add an employee",
 	"Adding fixed asset": "Adding fixed asset",
 	"Address": "Address",
+	"Advance Order": "Advance Order",
+	"Advance оrder": "Advance оrder",
 	"Advances": "Advances",
 	"Agreement": "Agreement",
 	"All": "All",
 	"Amortized Cost": "Amortized Cost",
 	"Amount": "Amount",
+	"Amount Accrued": "Amount Accrued",
 	"Available balance: ": "Available balance: ",
 	"Balance": "Balance",
 	"Balance account": "Balance account",
 	"Bank": "Bank",
 	"Bank account": "Bank account",
 	"Birth date": "Birth date",
+	"Bonuses": "Bonuses",
 	"Bookings": "Bookings",
 	"Branch": "Branch",
 	"Calculation LLP":"Calculation LLP",
@@ -27,6 +31,7 @@
 	"Cancel": "Cancel",
 	"Cash": "Cash",
 	"Cash Flow Statement":"Cash Flow Statement",
+	"Cash Journal": "Cash Journal",
 	"Categories": "Categories",
 	"Category": "Category",
 	"Chart of Accounts": "Chart of Accounts",
@@ -58,6 +63,7 @@
 	"Database": "Database",
 	"Date": "Date",
 	"Day off": "Day off",
+	"Days Worked": "Days Worked",
 	"Debit": "Debit",
 	"Debit account": "Debit account",
 	"Deductible": "Deductible",
@@ -77,6 +83,7 @@
 	"End Credit": "End Credit",
 	"End Debit": "End Debit",
 	"Error": "Error",
+	"Expenditure": "Expenditure",
 	"Export": "Export",
 	"Female": "Female",
 	"Financial Statements":"Financial Statements",
@@ -84,6 +91,7 @@
 	"First Name": "First Name",
 	"Fixed Assets": "Fixed Assets",
 	"Fixed Asset": "Fixed Asset",
+	"Forming date": "Forming date",
 	"From": "From",
 	"Full name": "Full name",
 	"Gender": "Gender",
@@ -91,6 +99,7 @@
 	"Group": "Group",
 	"Hire date": "Hire date",
 	"Identification": "Identification",
+	"Income Tax": "Income Tax",
 	"Interest": "Interest",
 	"Interest Status":"Interest Status",
 	"Invalid username or password.": "Invalid username or password.",
@@ -102,7 +111,7 @@
 	"Legal address": "Legal address",
 	"Lifetime": "Lifetime",
 	"Loan Loss Provision":"Loan Loss Provision",
-	"Loan repayment": "Loan repayment",
+	"Loan Repayment Order": "Loan Repayment Order",
 	"Long-Term Loan":"Long-Term Loan",
 	"LLP Amount":"LLP Amount",
 	"LLP Interest Amount":"LLP Interest Amount",
@@ -110,6 +119,7 @@
 	"Male": "Male",
 	"May receive advances": "May receive advances",
 	"Message": "Message",
+	"Month": "Month",
 	"Name": "Name",
 	"No": "No",
 	"Normal": "Normal",
@@ -121,6 +131,7 @@
 	"Payment method": "Payment method",
 	"Payment type": "Payment type",
 	"Penalty": "Penalty",
+	"Pension Fund Contribution": "Pension Fund Contribution",
 	"Periodic Regulative Report":"Periodic Regulative Report",
 	"Phone Number": "Phone Number",
 	"Phone number": "Phone number",
@@ -133,6 +144,7 @@
 	"Provision Type":"Provision Type",
 	"Purpose": "Purpose",
 	"Recalculate LLP":"Recalculate LLP",
+	"Receiving": "Receiving",
 	"Reference Book": "Reference Book",
 	"Refresh": "Refresh",
 	"Reports": "Reports",
@@ -141,11 +153,14 @@
 	"Responsible Person": "Resposible Person",
 	"Responsible person": "Resposible person",
 	"Salary": "Salary",
+	"Salary Advance Order": "Salary Advance Order",
+	"Salary advance order": "Salary advance order",
 	"Save": "Save",
 	"Short-Term Loan":"Short-Term Loan",
 	"Show Deleted": "Show Deleted",
-	"Sick Day": "Болел",
+	"Sick Day": "Sick Day",
 	"Sick day": "Sick day",
+	"Social Fund Contributions": "Social Fund Contributions",
 	"Staff": "Staff",
 	"Start Cost": "Start Cost",
 	"Start cost": "Start cost",
@@ -158,14 +173,17 @@
 	"Suppliers": "Suppliers",
 	"Supplier": "Supplier",
 	"Tax number": "Tax number",
+	"Teller": "Teller",
 	"Timesheet": "Timesheet",
 	"TIN": "TIN",
 	"To": "To",
+	"Total to Pay": "Total to Pay",
 	"Turnover Balance Sheet": "Turnover Balance Sheet",
 	"Upgrade": "Upgrade",
 	"Upgrading database...": "Upgrading database...",
 	"Username": "Username",
 	"Vacation": "Vacation",
+	"Vacation Pay": "Vacation Pat",
 	"Worked": "Worked",
 	"Yes": "Yes"
 }
