--- a/Src/OpenCBS.ArchitectureV2/Languages/ru-RU.json
+++ b/Src/OpenCBS.ArchitectureV2/Languages/ru-RU.json
@@ -8,17 +8,21 @@
 	"Add an employee": "Добавить сотрудника",
 	"Adding fixed asset": "Постановка основного средства",
 	"Address": "Адрес",
+	"Advance Order": "Выдача денежных средств подотчетнику",
+	"Advance оrder": "Выдача денежных средств подотчетнику",
 	"Advances": "Авансы",
 	"Agreement": "Договор",
 	"All": "Все",
 	"Amortized Cost": "Амортизировано",
 	"Amount": "Сумма",
+	"Amount Accrued": "Начислено",
 	"Available balance: ": "Доступный баланс: ",
 	"Balance": "Баланс",
 	"Balance account": "Балансовый счет",
 	"Bank": "Банк",
 	"Bank account": "Банк. счет",
 	"Birth date": "Дата рождения",
+	"Bonuses": "Премиальные",
 	"Bookings": "Проводки",
 	"Branch": "Филиал",
 	"Can get advance": "Подотчетное лицо",
@@ -27,6 +31,7 @@
 	"Calculation of the LLP program-to-date has been performed":"Расчет РППУ программой до текущей даты не производился",
 	"Cash": "Касса",
 	"Cash Flow Statement":"Отчет о движении денежных средств",
+	"Cash Journal": "Кассовый журнал",
 	"Categories": "Категории",
 	"Category": "Категория",
 	"Chart of Accounts": "План счетов",
@@ -58,6 +63,7 @@
 	"Database": "База данных",
 	"Date": "Дата",
 	"Day off": "Выходной",
+	"Days Worked": "Отработано",
 	"Debit": "Дебет",
 	"Debit account": "Дебетовый счет",
 	"Deductible": "Перс. вычет",
@@ -77,6 +83,7 @@
 	"End Credit": "Кредит на конец",
 	"End Debit": "Дебет на конец",
 	"Error": "Ошибка",
+	"Expenditure": "Расходный кассовый ордер",
 	"Export": "Экспортировать",
 	"Female": "Женщина",
 	"Financial Statements":"Бухгалтерская отчетность",
@@ -84,6 +91,7 @@
 	"First Name": "Имя",
 	"Fixed Assets": "Основные средства",
 	"Fixed Asset": "Основное средство",
+	"Forming date": "Дата форм.",
 	"From": "С",
 	"Full name": "Полное название",
 	"Gender": "Пол",
@@ -91,6 +99,7 @@
 	"Handicapped": "Инвалидность",
 	"Hire date": "Дата найма",
 	"Identification": "Паспорт",
+	"Income Tax": "Подоходный налог",
 	"Interest": "Процент",
 	"Interest Status":"Статус не начисление",
 	"Invalid username or password.": "Неверное имя пользователя или пароль.",
@@ -102,7 +111,7 @@
 	"Last Operation Date": "Дата последней операции",
 	"Legal address": "Юр. адрес",
 	"Lifetime": "Аморт. период",
-	"Loan repayment": "Оплата по кредиту",
+	"Loan Repayment Order": "Оплата по кредиту",
 	"Loan Loss Provision":"РППУ",
 	"Login": "Вход",
 	"Long-Term Loan":"Долгосрочные кредиты",
@@ -111,6 +120,7 @@
 	"Male": "Мужчина",
 	"May receive advances": "Подотчетное лицо",
 	"Message": "Сообщение",
+	"Month": "Месяц",
 	"Name": "Название",
 	"No": "Нет",
 	"Normal": "Обычное",
@@ -122,6 +132,7 @@
 	"Payment method": "Метод оплаты",
 	"Payment type": "Тип погашения",
 	"Penalty": "Пени",
+	"Pension Fund Contribution": "Отчисления в пенс.фонд",
 	"Periodic Regulative Report":"Периодический регулятивный отчет",
 	"Phone Number": "Телефон",
 	"Phone number": "Телефон",
@@ -134,6 +145,7 @@
 	"Proof at Closing": "Основание закрытия",
 	"Purpose": "Назначение",
 	"Recalculate LLP":"Пересчитать",
+	"Receiving": "Приходный кассовый ордер",
 	"Reference Book": "Справочник",
 	"Refresh": "Обновить",
 	"Reports": "Отчеты",
@@ -142,11 +154,14 @@
 	"Responsible Person": "МОЛ",
 	"Responsible person": "МОЛ",
 	"Salary": "Зарплата",
+	"Salary Advance Order": "Выдача денежных средств под заработную плату",
+	"Salary advance order": "Выдача денежных средств под заработную плату",
 	"Save": "Сохранить",
 	"Sick Day": "Болел",
 	"Sick day": "Болел",
 	"Short-Term Loan":"Краткосрочные кредиты",
 	"Show Deleted": "Показать удаленные",
+	"Social Fund Contributions": "Отчисления в соц.фонд",
 	"Staff": "Сотрудники",
 	"Start Cost": "Стоимость на начало",
 	"Start cost": "Стоимость на начало",
@@ -159,14 +174,17 @@
 	"Suppliers": "Поставщики",
 	"Supplier": "Поставщик",
 	"Tax number": "ИНН",
+	"Teller": "Касса",
 	"Timesheet": "Табель посещаемости",
 	"TIN": "ИНН",
 	"To": "По",
+	"Total to Pay": "Итого",
 	"Turnover Balance Sheet": "Оборото-сальдовая ведомость",
 	"Upgrade": "Обновление",
 	"Upgrading database...": "Обновляю базу данных...",
 	"Username": "Имя пользователя",
 	"Vacation": "Отпуск",
+	"Vacation Pay": "Отпускные",
 	"Worked": "Работал",
 	"Yes": "Да"
 }
